--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -24,7 +24,7 @@
 
                 <label for="password">Password: </label>
                 <input type="password" name="password" required id="password" class="form-control" placeholder="********">
-                <br>
+                <input type="checkbox" class="mt-3 mb-4" name="showPassword" id="showPassword" > <label for="showPassword"><small>Показать пароль</small></label><br>
                 <div style="color:red" th:if="${param.error}" >
                     Неправильный email или пароль
                 </div>
@@ -36,6 +36,7 @@
         </div>
     </div>
 
+    <script src="/js/login.js"></script>
     <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.min.js}"></script>
 </body>
 </html>
